<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activities.HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:background="@drawable/bg_image"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:weightSum="2"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:paddingStart="120dp"
                        android:src="@drawable/logo"/>
                </LinearLayout>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:paddingTop="22dp"
                    android:paddingLeft="6dp"
                    android:text="ចង់ញ៉ាំ"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorWhite"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="15dp">

                <LinearLayout
                    android:id="@+id/llSearch"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:background="@drawable/border_rectangle"
                    android:backgroundTint="@color/colorWhite"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_search_red"
                        android:layout_marginLeft="10dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:layout_marginLeft="8dp"
                        android:singleLine="true"
                        android:hint="Search restaurants"
                        android:textSize="14sp"
                        android:background="@android:color/transparent"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="?android:attr/windowBackground"
                android:weightSum="3"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:layout_weight="1">

                    <LinearLayout
                        android:id="@+id/llNearMe"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="22dp"
                            android:layout_marginTop="10dp"
                            android:layout_gravity="center_vertical"
                            android:src="@drawable/ic_radar"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:gravity="center_vertical|center_horizontal"
                            android:text="@string/near_me"
                            android:textSize="13sp"/>

                    </LinearLayout>

                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:background="@color/colorLightGray"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_fork_knife_red"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:gravity="center_vertical|center_horizontal"
                        android:text="@string/type_food"
                        android:textSize="13sp"/>

                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:background="@color/colorLightGray"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_gps"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:gravity="center_vertical|center_horizontal"
                        android:text="@string/location"
                        android:textSize="13sp"/>

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recommended"
                android:textSize="16sp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvRecommend"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/coupon"
                android:textSize="16sp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvCoupon"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_marginTop="10dp"/>

        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="?android:attr/windowBackground"
        android:forceHasOverlappingRendering="true"
        app:labelVisibilityMode="labeled"
        app:menu="@menu/buttom_navigation" />


</RelativeLayout>